<resources>
    <string name="app_name">TaniLand</string>
    <string name="default_web_client_id">820942148551-9k2d4fk3r8c9t92d5bhod4sn1jbd7gtf.apps.googleusercontent.com</string>
    <string name="logosplashscreen">LogoSplashScreen</string>
    <string name="logoauthpage">LogoAuthPage</string>
    <string name="deskripsi_app">Aplikasi Manajemen Lahan Tani Berbasis Teknologi</string>
    <string name="google">Masuk dengan Google</string>
    <string name="tidak_ada_koneksi_internet">Tidak ada koneksi Internet</string>
    <string name="mohon_hubungkan_kembali_koneksi_internet_anda_dan_coba_kembali">Mohon hubungkan kembali koneksi internet anda dan coba kembali.</string>
    <string name="avatar_profile">Avatar Profile</string>
    <string name="premium">Premium</string>
    <string name="weathericon">weatherIcon</string>
    <string name="satuan_hari">%s Hari</string>
    <string name="suhu_celcius">%s°C</string>
    <string name="tidak_ada_data">Tidak Ada Data</string>
    <string name="item_lahan_luas">%s Hektar</string>
    <string name="item_lahan_gambar">item_lahan_gambar</string>
    <string name="home">Home</string>
    <string name="lahan">Lahan</string>
    <string name="artikel">Artikel</string>
    <string name="profile">Profile</string>
    <string name="background_header">background_header</string>
    <string name="tampilkan_semua">Tampilkan Semua</string>
    <string name="subtitile_btnauth">Temukan solusi inovatif untuk manajemen lahan pertanian Anda dengan aplikasi mobile Tani Land</string>
    <string name="backbutton">backButton</string>
    <string name="tambah_lahan">Tambah Lahan</string>
    <string name="detail_lahan">Detail Lahan</string>
    <string name="riwayat_tanam">Riwayat Tanam</string>
    <string name="pilih_bibit">Pilih Bibit</string>
    <string name="rekomendasi_tanam">Rekomendasi Tanam</string>
    <string name="btn_camera">btn_camera</string>
    <string name="kamera">Kamera</string>
    <string name="btn_galeri">btn_galeri</string>
    <string name="galeri">Galeri</string>
    <string name="btn_iot">btn_iot</string>
    <string name="iot">IoT</string>
    <string name="batal">Batal</string>
    <string name="nama_bibit">Nama Bibit</string>
    <string name="item_bibit_harga">Rp %s</string>
    <string name="button_delete">button_delete</string>
    <string name="beli_bibit">Beli Bibit</string>
    <string name="tanam_sekarang">Tanam Sekarang</string>
    <string name="nama_lahan">Nama Lahan</string>
    <string name="luas_lahan_hektar">Luas Lahan (Hektar)</string>
    <string name="alamat_lahan">Alamat Lahan</string>
    <string name="simpan">Simpan</string>
    <string name="data_penanaman">Data Penanaman</string>
    <string name="bibit">Bibit</string>
    <string name="umur_tanam">Umur Tanaman</string>
    <string name="kelola_keuangan">Kelola Keuangan</string>
    <string name="panen">Panen</string>
    <string name="jadwal_perawatan">Jadwal Perawatan</string>

    <string name="silahkan_login_ulang">Silahkan login ulang</string>
    <string name="kesalahan_memuat_data">Kesalahan memuat data</string>
    <string name="floating_btn_tambah">Floating Btn Tambah</string>
    <string name="logout">Logout</string>
    <string name="item_bibit_gambar">item_bibit_gambar</string>
    <string name="jenis_detail">%s</string>
    <string name="hubungkan_iot">Hubungkan IoT</string>
    <string name="reload_button">reload_button</string>
    <string name="kelembapan">Kelembapan</string>
    <string name="kelembapan_persen">%s %%</string>
    <string name="suhu">Suhu</string>
    <string name="toast_icon">toast_icon</string>
    <string name="kesalahan_authentikasi_coba_lagi">Kesalahan Authentikasi, Coba lagi.</string>
    <string name="gagal_menambahkan_lahan">Gagal menambahkan Lahan, periksa masukan Anda.</string>
    <string name="hapus_lahan">Hapus Lahan</string>
    <string name="apakah_anda_yakin_ingin_menghapus_lahan_ini">Apakah Anda yakin ingin menghapus lahan ini?</string>
    <string name="ya">Ya</string>
    <string name="berhasil_menghapus_lahan">Berhasil menghapus lahan</string>
    <string name="gagal_menghapus_lahan">Gagal menghapus lahan</string>
    <string name="hapus_tanam">Hapus Tanam</string>
    <string name="apakah_anda_yakin_ingin_menghapus_plan_tanam_ini">Apakah Anda yakin ingin menghapus plan tanam ini?</string>
    <string name="berhasil_menghapus_plan_tanam">Berhasil menghapus plan tanam</string>
    <string name="gagal_menghapus_plan_tanam">Gagal menghapus plan tanam</string>
    <string name="tidak">Tidak</string>
    <string name="berhasil_menghubungkan_iot_ke_lahan">Berhasil Menghubungkan IoT ke Lahan</string>
    <string name="iot_tool_sudah_terdaftar_pada_lahan_lain">IoT Tool tidak ditemukan / sudah terdaftar pada lahan Lain</string>
    <string name="berhasil_menambahkan_lahan">Berhasil menambahkan Lahan</string>
    <string name="banner_image_plan_premium">banner_image_plan_premium</string>
    <string name="close_button_plan_premium">close_button_plan_premium</string>
    <string name="upgrade">UPGRADE</string>
    <string name="pro">Pro</string>
    <string name="desc_upgrade">Tingkatkan Manajemen Lahan Anda dengan TaniLand Pro</string>
    <string name="hubungi_kontak_sales_kami">Hubungi Kontak Sales kami</string>
    <string name="feature_interactive_finance">Kelola Keuangan yang interaktif</string>
    <string name="feature_finance_analysis">Analisis Keuangan</string>
    <string name="feature_plant_care_analysis">Analisis Perawatan Tanaman</string>
    <string name="feature_purchase_order">Order Pembelian (Purchase Order)</string>
    <string name="feature_productivity_report">Laporan Produktivitas</string>
    <string name="feature_performance_speed">Kecepatan Performa</string>
    <string name="purchase_order">Purchase Order</string>
    <string name="whatsapp_not_installed">WhatsApp tidak terinstal</string>
    <string name="tanggal_tanam">Tanggal Tanam</string>
    <string name="jarak_antar_tanaman">Jarak Antar Tanaman (Cm)</string>
    <string name="gagal_memperbarui_status_tanam">Gagal memperbarui status tanam</string>
    <string name="default_jarak_tanaman">30</string>
    <string name="jenis_bibit">Jenis Bibit</string>
    <string name="tanggal_panen">Tanggal Panen</string>
    <string name="jumlah_panen_kg">Jumlah Panen (Kg)</string>
    <string name="harga_panen_per_kg">Harga Panen (per Kg)</string>
    <string name="lihat_laporan_tanam">Lihat Laporan Tanam</string>
    <string name="data_iot_berhasil_terhapus">Data IoT berhasil terhapus</string>
    <string name="cari_artikel">Cari Artikel</string>
    <string name="tidak_ada_artikel_yang_tersedia">Tidak ada artikel yang tersedia</string>
    <string name="laporan_seluruh_lahan">Laporan Seluruh Lahan</string>
    <string name="panduan_penggunaan">Panduan Penggunaan</string>
    <string name="standard">Standard</string>
    <string name="rekomendasi_jadwal_1_7">Untuk periode 1 - 7 hari setelah penanaman, kami sarankan untuk fokus pada penanaman benih, pemupukan dasar, dan perlakuan benih, sebagai langkah awal yang krusial dalam siklus pertumbuhan sayuran Anda.</string>
    <string name="hari_ke_1_7">Hari ke 1 – 7</string>
    <string name="tambah_aktivitas">Tambah Aktivitas</string>
    <string name="kategori_aktivitas">Kategori Aktivitas</string>
    <string name="nama_aktivitas">Nama Aktivitas</string>
    <string name="keterangan_aktivitas">Keterangan Aktivitas</string>
    <string name="jenis_pupuk">Jenis Pupuk</string>
    <string name="jumlah_penggunaan_pupuk_kg">Jumlah Penggunaan Pupuk (Kg)</string>
    <string name="coming_soon">Coming soon</string>

</resources>