<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/popup_rekomendasi_tanam"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/rekomendasi_tanam"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/menu_kamera"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:contentDescription="@string/btn_camera"
                android:src="@drawable/ic_kamera" />

            <TextView
                android:id="@+id/txtCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/kamera" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_galeri"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:contentDescription="@string/btn_galeri"
                android:src="@drawable/ic_galeri" />

            <TextView
                android:id="@+id/txtGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/galeri" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_iot"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:contentDescription="@string/btn_iot"
                android:src="@drawable/ic_iot" />

            <TextView
                android:id="@+id/txtIoT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/iot" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnCancel"
        style="@style/BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/accient"
        android:text="@string/batal"
        android:textColor="@color/white" />

</LinearLayout>
