<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_form_status_tanam_close"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tanggal_panen_label"
        style="@style/BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:labelFor="@+id/tanggal_panen_input"
        android:text="@string/tanggal_panen" />

    <EditText
        android:id="@+id/tanggal_panen_input"
        style="@style/BodyLargeBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:focusable="false"
        android:importantForAutofill="no"
        android:inputType="date" />

    <TextView
        android:id="@+id/jumlah_panen_label"
        style="@style/BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:labelFor="@+id/jumlah_panen_input"
        android:text="@string/jumlah_panen_kg" />

    <EditText
        android:id="@+id/jumlah_panen_input"
        style="@style/BodyLargeBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:importantForAutofill="no"
        android:inputType="number" />

    <TextView
        android:id="@+id/harga_panen_label"
        style="@style/BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:labelFor="@+id/harga_panen_input"
        android:text="@string/harga_panen_per_kg" />

    <EditText
        android:id="@+id/harga_panen_input"
        style="@style/BodyLargeBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:importantForAutofill="no"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btn_simpan"
        style="@style/BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="24dp"
        android:background="@drawable/bottom_navigation_background"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/simpan"
        android:textColor="@color/white" />

</LinearLayout>
