<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="30dp"
    android:paddingTop="30dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPilihBibit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_variant"
        android:text="@string/pilih_bibit"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:elevation="5dp"
        android:stateListAnimator="@animator/btn_elevation_anim"
        app:rippleColor="@null" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_rekomendasi_tanam"
        style="@style/BodyLargeBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonPilihBibit"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/green_variant"
        android:text="@string/rekomendasi_tanam"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:elevation="5dp"
        android:stateListAnimator="@animator/btn_elevation_anim"
        app:rippleColor="@null" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRiwayatTanam"
        style="@style/BodyLargeBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_rekomendasi_tanam"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/ternary_yellow"
        android:text="@string/riwayat_tanam"
        android:textColor="@color/dark"
        app:cornerRadius="10dp"
        app:elevation="5dp"
        android:stateListAnimator="@animator/btn_elevation_anim"
        app:rippleColor="@null" />

</RelativeLayout>