<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neutral"
    tools:context=".pages.riwayattanam.RiwayatTanamActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/neutral"
        android:layout_marginTop="10dp"
        app:contentInsetStart="0dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/rounded_button_back"
            android:contentDescription="@string/backbutton"
            android:padding="10dp"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/riwayat_tanam"
            style="@style/TitleLargeBold"/>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/noData"
        style="@style/BodyMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/tidak_ada_data"
        android:visibility="gone"
        android:layout_below="@id/toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/riwayat_tanam_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/noData"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="20dp"
        tools:itemCount="5"
        tools:listitem="@layout/riwayat_tanam_item" />

</RelativeLayout>
